feat: listing categories api
